--- a/nippon/bestil.html
+++ b/nippon/bestil.html
@@ -51,8 +51,76 @@
     <!-- Main section -->
 
 <main>
+<section class="bestil">
+<div class="bestil-kasse">
+<br>
+<h1>Tilbage til oplevelseskassen</h1>
+<br>
+<hr>
+<br>
 
-    
+
+<!-- personer -->
+<div class="personer">
+<h2>Hvor mange personer skal kassen være til?</h2>
+<button class="btn">2</button>
+<button class="btn">3</button>
+<button class="btn">4</button>
+<button class="btn">5</button>
+<button class="btn">6</button>
+<button class="btn">7</button>
+<button class="btn">8</button>
+</div>
+
+<!-- forbehold -->
+<div class="forbehold">
+<h2>Har du nogen forbehold, som vi skal tage hensyn til?</h2>
+<input type="Skriv" id="skriv" placeholder="Skriv her " required>
+</div>
+
+<!-- tilføj -->
+<h2>Er der noget du vil tilføje til din kasse?</h2>
+<div class="checkbox-container">
+    <input type="checkbox" id="minCheckbox">
+    <label for="minCheckbox" class="checkbox-text">
+<h3>+ Dehydreret tang</h3> 
+<p>Tang til 4-6 personer</p>
+<p>Pris 80kr</p>
+    </label>
+</div>
+
+<div class="checkbox-container">
+    <input type="checkbox" id="minCheckbox">
+    <label for="minCheckbox" class="checkbox-text">
+<h3>+ Crispychili olie, lavet på hjemmedyrket chillier</h3> 
+<p>1 glas, 250ml</p>
+<p>Pris 45kr</p>
+    </label>
+</div>
+
+<div class="checkbox-container">
+    <input type="checkbox" id="minCheckbox">
+    <label for="minCheckbox" class="checkbox-text">
+<h3>+ Ekstra spisepinde</h3> 
+<p>2 stk</p>
+<p>Pris 55kr</p>
+    </label>
+</div>
+
+<a href="#">Se mere</a>
+
+<img src="img/illustrationer/oplevelse-kasse.png" class="oplevelses-kasse">
+</section>
+
+<section class="Bestil">
+<div class="1text">
+<p>Pris for 2 personer, fra</p> <h3>549</h3>
+</div>
+<p>Gratis fragt til alle medlemmer</p>
+<a href="kurv.html"><button class="næste">Næste</button></a>
+</div>
+</section>
+
 </main>
 
 
