ups fejl nu redirecter den til besti.html

--- a/nippon/maeltidskasser.html
+++ b/nippon/maeltidskasser.html
@@ -84,7 +84,7 @@
 
         <p id="bestil-tekst">Pris for 2 personer, fra <span id="pris">549 kr.</span> <br>Gratis fragt til alle medlemmer</p>
 
-        <button id="bestil-knap" onclick="redirectToKurv()">Bestil</button>
+        <button id="bestil-knap" onclick="redirectToBestil()">Bestil</button>
 
         <section id="om-kassen" style="background-image: url('img/fotos/om-kassen.png');">
             <aside id="om-kassen-aside">
