favorit hjertet i pop-up :P

--- a/nippon/maeltidskasser.html
+++ b/nippon/maeltidskasser.html
@@ -82,9 +82,14 @@
             <li><a class="popup-link" id="faq-link" href="#faq">FAQ</a></li>
         </ul>
 
-        <p id="bestil-tekst">Pris for 2 personer, fra <span id="pris">549 kr.</span> <br>Gratis fragt til alle medlemmer</p>
+        <!-- Bestil knappen og tilhørende tekst -->
 
         <button id="bestil-knap" onclick="redirectToBestil()">Bestil</button>
+
+        <!-- Favorit hjerte knappen og tilhørende tekst -->
+        <p id="favoritter-tekst">Tilføj til dine favoritter </p>
+
+        <span id="favoritter-hjerte" class="material-symbols-outlined" onclick="redirectToFavoritter()">favorite</span>
 
         <section id="om-kassen" style="background-image: url('img/fotos/om-kassen.png');">
             <aside id="om-kassen-aside">
