--- a/nippon/bestil.html
+++ b/nippon/bestil.html
@@ -80,6 +80,8 @@
 
 <!-- tilføj -->
 <h2>Er der noget du vil tilføje til din kasse?</h2>
+
+<section class="tilføj">
 <div class="checkbox-container">
     <input type="checkbox" id="minCheckbox">
     <label for="minCheckbox" class="checkbox-text">
@@ -106,19 +108,20 @@
 <p>Pris 55kr</p>
     </label>
 </div>
-
 <a href="#">Se mere</a>
-
-<img src="img/illustrationer/oplevelse-kasse.png" class="oplevelses-kasse">
 </section>
 
+<!-- bestil -->
 <section class="Bestil">
+    <img src="img/illustrationer/oplevelse-kasse.png" class="oplevelses-kasse">
 <div class="1text">
 <p>Pris for 2 personer, fra</p> <h3>549</h3>
 </div>
 <p>Gratis fragt til alle medlemmer</p>
 <a href="kurv.html"><button class="næste">Næste</button></a>
 </div>
+</section>
+
 </section>
 
 </main>
