update øhhh bestil

--- a/nippon/maeltidskasser.html
+++ b/nippon/maeltidskasser.html
@@ -84,9 +84,12 @@
 
         <!-- Bestil knappen og tilhørende tekst -->
 
+        <p id="bestil-tekst">Pris for 2 personer, fra <span id="pris">549kr.</span> <br> Gratis fragt til alle medlemmer</p>
+
         <button id="bestil-knap" onclick="redirectToBestil()">Bestil</button>
 
         <!-- Favorit hjerte knappen og tilhørende tekst -->
+
         <span id="favoritter-hjerte" class="material-symbols-outlined" onclick="redirectToFavoritter()">favorite</span>
 
         <section id="om-kassen" style="background-image: url('img/fotos/om-kassen.png');">
