fikset alle navbare :DDD

--- a/nippon/index.html
+++ b/nippon/index.html
@@ -36,7 +36,7 @@
           
                 <!-- Menupunkter -->
                 <a id="hero-menupunkt-1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
-                <a id="hero-menupunkt-2" href="udforsk.html">UDFORSK NIPPON</a>
+                <a id="hero-menupunkt-2" href="udforsk-kokke.html">UDFORSK NIPPON</a>
                 <a id="hero-menupunkt-3" href="kurv.html"><span class="material-symbols-outlined">shopping_cart</span></a>
          
 
