--- a/nippon/kontakt.html
+++ b/nippon/kontakt.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- Link til font awesome iconer -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="img/illustrationer/nippon-logo-2.webp">
     <link rel="stylesheet" href="css/kontakt.css">
 </head>
 
