--- a/nippon/maeltidskasser.html
+++ b/nippon/maeltidskasser.html
@@ -14,6 +14,8 @@
     <!-- Link til font awesome iconer -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/410264dd86.js" crossorigin="anonymous"></script>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="img/illustrationer/nippon-logo-2.webp">
     <link rel="stylesheet" href="css/maeltidskasser.css">
 </head>
 <body>
