--- a/nippon/index.html
+++ b/nippon/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="nippon, asiatisk mad, aftensmad, ramen, måltidskasser, oplevelseskasser, hverdagskasser, ingredienskasser, redskabskasser, oplysninger, oplevelser, japanske retter">
-    <meta name="description" content="Velkommen til Nippon! Vi laver autentisk asiatiske opskrifter og oplevelser, der bliver leveret lige foran din dør. Udforsk vores køkke og lækre opskrifter her på siden. Vi er en måltidskasse til din næste oplevelse i køkkenet."> 
+    <meta name="keywords" content="nippon, asiatisk mad, aftensmad, ramen, måltidskasser, oplevelseskasser, 
+    hverdagskasser, ingredienskasser, redskabskasser, oplysninger, oplevelser, japanske retter">
+    <meta name="description" content="Velkommen til Nippon! Vi laver autentisk asiatiske 
+    opskrifter og oplevelser, der bliver leveret lige foran din dør. 
+    Udforsk vores køkke og lækre opskrifter her på siden. Vi er en måltidskasse til din næste oplevelse i køkkenet."> 
     <title>Nippon forside</title>
  
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
@@ -89,11 +92,11 @@
     
     <section class="ramen">
         <p>Har du testet vores ramen? I denne måneds oplevelseskasse følger vores opskrift på en lækker ramen med</p>
-        <picture class="ramen-billeder">
+        <section class="ramen-billeder">
             <img src="img/illustrationer/ramen-aeg.png" alt="Illustration over ramen" class="ramen1">
             <img src="img/illustrationer/ramen-svampe.png" alt="Illustration over ramen">
             <img src="img/illustrationer/ramen-pakchoi.png" alt="Illustration over ramen">
-        </picture>
+        </section>
     </section>
 
     </main>
