--- a/nippon/kurv.html
+++ b/nippon/kurv.html
@@ -67,16 +67,16 @@
                 </div>
                 <h3>Kontaktoplysninger</h3>
                 <section class="container3">
-                    <input type="navn" id="navn" placeholder="Navn" required>
-                    <input type="efternavn" id="efternavn" placeholder="Efternavn" required>
-                    <input type="e-mail" id="e-mail" placeholder="E-mail" required>
-                    <input type="telefonnummer" id="telefonnummer" placeholder="Telefonnummer" required>
+                    <input id="navn" placeholder="Navn" required>
+                    <input id="efternavn" placeholder="Efternavn" required>
+                    <input id="e-mail" placeholder="E-mail" required>
+                    <input id="telefonnummer" placeholder="Telefonnummer" required>
                 </section>
 
                 <h3>Levering</h3>
                 <section class="container3">
-                    <input type="levering" id="levering" placeholder="Leveringsadresse" required>
-                    <button type="gls">GLS</button>
+                    <input id="levering" placeholder="Leveringsadresse" required>
+                    <button>GLS</button>
                 </section>
             </section>
 
@@ -94,8 +94,8 @@
                 </div>
             </section>
                     
-            <input type="rabatkode" id="rabatkode" placeholder="Rabatkode eller gavekort">
-            <button type="knap">Brug</button>
+            <input id="rabatkode" placeholder="Rabatkode eller gavekort">
+            <button>Brug</button>
 
            
             <p>Subtotal <br> 549,00 kr. </p>
@@ -112,15 +112,15 @@
                 </div>
             </section>
             <hr>
-            <button class="betal" type="betal">Betal</button>
+            <button class="betal">Betal</button>
 
             <p class="tekst-p">Vidste du, at du kan bestille oplevelseskassen som abonnement? <br>
                 Få den lige til din dør hver måned. <br>
                 En kasse fyldt med en masse nye opskrifter, oplevelser og gode stunder. 
             </p>
 
-            <input type="abonnement" id="abonnement" placeholder="E-mail" required>
-            <button type="knap">Tilmeld</button>
+            <input id="abonnement" placeholder="E-mail" required>
+            <button >Tilmeld</button>
         </section>
     </section>
 
