--- a/nippon/404.html
+++ b/nippon/404.html
@@ -19,7 +19,7 @@
      <header class="navbar">
 
         <!-- Logo -->
-            <a id="navbar-logo" href="index.html"><img id="navbar-logo" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main"></a>
+            <a id="navbar-logo" href="index.html"><img id="navbar-logo1" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main"></a>
 
             <!-- Navbar ikoner -->
             <div class="navbar-icons">
@@ -34,7 +34,9 @@
 
             <!-- Menupunkter -->
     
-            <p id="navbar-styling-element" href="#">asd</p>
+            <section id="navbar-styling-element">
+                <a href="#"></a>
+            </section>
             <a id="navbar-link1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
             <a id="navbar-link2" href="#">UDFORSK NIPPON</a>
                 <ul class="dropdown-content"> 
