--- a/nippon/udforsk-kredsloeb.html
+++ b/nippon/udforsk-kredsloeb.html
@@ -66,7 +66,7 @@
 
     <h2>Vi ønsker at støtte hjernerne bag vores opskrifter og det lokalsamfund de lever i. Vi sørger derfor altid for at vores krydderier og lokale ingredienser bliver betalt.</h2>
 
-    <img class="infog" src="img/illustrationer/infographic.png" alt="Nippons kredsløb">
+    <img class="infog" src="img/illustrationer/" alt="Nippons kredsløb">
 
 </article>
 
