--- a/nippon/maeltidskasser.html
+++ b/nippon/maeltidskasser.html
@@ -24,7 +24,8 @@
  <header class="navbar">
 
     <!-- Logo -->
-        <a id="navbar-logo" href="index.html"><img id="navbar-logo" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main"></a>
+         <!-- Logo -->
+         <img id="navbar-logo" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main" onclick="redirectToIndex()">
 
         <!-- Navbar ikoner -->
         <div class="navbar-icons">
@@ -39,7 +40,7 @@
 
         <!-- Menupunkter -->
 
-        <p id="navbar-styling-element" href="#">asd</p>
+        <p id="navbar-styling-element">asd</p>
         <a id="navbar-link1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
         <a id="navbar-link2" href="#">UDFORSK NIPPON</a>
             <ul class="dropdown-content"> 
@@ -160,7 +161,6 @@
                         <li>1 flaske Riesling (Kung Fuu 2011)</li>
                         <li>2 hjemmelavet Griger Beer</li>
                     </ul>
-                </h3>
             </aside>
         </section>
 
