--- a/nippon/udforsk-kokke.html
+++ b/nippon/udforsk-kokke.html
@@ -23,7 +23,7 @@
     <header class="navbar">
 
         <!-- Logo -->
-            <a id="navbar-logo" href="index.html"><img id="navbar-logo" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main"></a>
+        <img id="navbar-logo" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main" onclick="redirectToIndex()">
 
             <!-- Navbar ikoner -->
             <div class="navbar-icons">
@@ -38,7 +38,7 @@
 
             <!-- Menupunkter -->
     
-            <p id="navbar-styling-element" href="#">asd</p>
+            <p id="navbar-styling-element">asd</p>
             <a id="navbar-link1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
             <a id="navbar-link2" href="#">UDFORSK NIPPON</a>
                 <ul class="dropdown-content"> 
