--- a/nippon/udforsk-kredsloeb.html
+++ b/nippon/udforsk-kredsloeb.html
@@ -64,9 +64,13 @@
 
     <h1>Vil du have indsigt i Nippons kredsløb?</h1>
 
-    <h2>Vi ønsker at støtte hjernerne bag vores opskrifter og det lokalsamfund de lever i. Vi sørger derfor altid for at vores krydderier og lokale ingredienser bliver betalt.</h2>
+    <h2>Vi ønsker at støtte hjernerne bag vores opskrifter og det lokalsamfund de lever i. Derfor opkøber vi alle vores tørre råvarer direkte fra Japan <br>
+    Vi har et ønske om at være autentiske hele vejen rundt og derfor kan du nedenfor se vores kredsløb. </h2>
 
-    <img class="infog" src="img/illustrationer/" alt="Nippons kredsløb">
+    <h3> Vores vision er at skabe en autentisk asiatisk madoplevelse</h3>
+
+   
+    <img class="infog" src="img/illustrationer/infographic.png" alt="Nippons kredsløb">
 
 </article>
 
