--- a/nippon/favoritter.html
+++ b/nippon/favoritter.html
@@ -25,7 +25,7 @@
    <header class="navbar">
 
     <!-- Logo -->
-        <a id="navbar-logo" href="index.html"><img id="navbar-logo" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main"></a>
+    <img id="navbar-logo" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main" onclick="redirectToIndex()">
 
         <!-- Navbar ikoner -->
         <div class="navbar-icons">
@@ -40,9 +40,9 @@
 
         <!-- Menupunkter -->
 
-        <p id="navbar-styling-element" href="#">asd</p>
+        <p id="navbar-styling-element">asd</p>
         <a id="navbar-link1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
-        <a id="navbar-link2" href="#">UDFORSK NIPPON</a>
+        <a id="navbar-link2" href="udforsk-kokke.html">UDFORSK NIPPON</a>
             <ul class="dropdown-content"> 
                 <li><a href="kontakt.html">Kontakt os</a></li>
                 <li><a href="udforsk-kokke.html">Hjernerne bag Nippon</a></li>
