--- a/nippon/kontakt.html
+++ b/nippon/kontakt.html
@@ -42,7 +42,7 @@
     
             <p id="navbar-styling-element" href="#">asd</p>
             <a id="navbar-link1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
-            <a id="navbar-link2" href="#">UDFORSK NIPPON</a>
+            <a id="navbar-link2" href="udforsk-kokke.html">UDFORSK NIPPON</a>
                 <ul class="dropdown-content"> 
                     <li><a href="kontakt.html">Kontakt os</a></li>
                     <li><a href="udforsk-kokke.html">Hjernerne bag Nippon</a></li>
