rettelser kredsløb side

--- a/nippon/udforsk-kredsloeb.html
+++ b/nippon/udforsk-kredsloeb.html
@@ -62,13 +62,15 @@
 
 <article class="infographic"> 
 
-    <h1>Vil du have indsigt i Nippons kredsløb?</h1>
+    <h1>Få indsigt i Nippons kredsløb</h1>
 
-    <h2>Vi ønsker at støtte hjernerne bag vores opskrifter og det lokalsamfund de lever i. Derfor opkøber vi alle vores tørre råvarer direkte fra Japan <br>
-    Vi har et ønske om at være autentiske hele vejen rundt og derfor kan du nedenfor se vores kredsløb. </h2>
+    <p>Vi ønsker at støtte hjernerne bag vores opskrifter og det lokalsamfund de lever i. Derfor opkøber vi alle vores tørre råvarer direkte fra Japan, sådan de også tjener på vores virksomhed. Få mere indsigt i vores kredsløb på denne side. <br>
+Vi ønsker at skabe den autentiske oplevelse for alle jer, der sidder derhjemme, men hvis i skal kunne smage det autentiske, så synes vi også, at vi skal støtte dem, der skaber den smag. I denne illustration viser vi vores kredsløb og beskriver hvad der sker på vejen - hele vejen fra Japan til de danske hjem.  </p>
 
-    <h3> Vores vision er at skabe en autentisk asiatisk madoplevelse</h3>
+   
+    <h3>Vores vision er at skabe en autentisk asiatisk madoplevelse</h3>
 
+   
    
     <img class="infog" src="img/illustrationer/infographic.png" alt="Nippons kredsløb">
 
