--- a/nippon/kontakt.html
+++ b/nippon/kontakt.html
@@ -25,7 +25,7 @@
     <header class="navbar">
 
         <!-- Logo -->
-            <a id="navbar-logo" href="index.html"><img id="navbar-logo" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main"></a>
+        <img id="navbar-logo" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main" onclick="redirectToIndex()">
 
             <!-- Navbar ikoner -->
             <div class="navbar-icons">
@@ -40,7 +40,7 @@
 
             <!-- Menupunkter -->
     
-            <p id="navbar-styling-element" href="#">asd</p>
+            <p id="navbar-styling-element">asd</p>
             <a id="navbar-link1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
             <a id="navbar-link2" href="udforsk-kokke.html">UDFORSK NIPPON</a>
                 <ul class="dropdown-content"> 
@@ -65,7 +65,7 @@
 <h2>Vi vil elske at høre fra jer! Så endelig kontakt os over alle vores platforme</h2>
 <p>Søvangen 3, 8000 Aarhus C </p>
 <a href="https://mail.google.com/">support@nippon.dk</a> <br>
-<a href="+45 12 13 14 15">+45 12 13 14 15</a> 
+<a href="#">+45 12 13 14 15</a> 
 </section>
 
 <section class="insta-container">
