--- a/nippon/kurv.html
+++ b/nippon/kurv.html
@@ -23,7 +23,7 @@
        <header class="navbar">
 
         <!-- Logo -->
-            <a id="navbar-logo" href="index.html"><img id="navbar-logo1" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main"></a>
+        <img id="navbar-logo" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main" onclick="redirectToIndex()">
 
             <!-- Navbar ikoner -->
             <div class="navbar-icons">
@@ -39,7 +39,6 @@
             <!-- Menupunkter -->
     
             <section id="navbar-styling-element">
-                <a href="#"></a>
             </section>
             <a id="navbar-link1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
             <a id="navbar-link2" href="udforsk-kokke.html">UDFORSK NIPPON</a>
