--- a/nippon/index.html
+++ b/nippon/index.html
@@ -136,7 +136,7 @@
         </li>
     </ul>
 </div>
-    <img src="img/fotos/some.png" alt="some" class="collage">
+    <img src="img/fotos/collage-socials-forside.png" alt="some" class="collage">
     
     </section>
 
